--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rollup --config rollup.config.js",
+    "build": "npm run babel && cp ./src/refresh.css ./lib/refresh.css",
     "babel": "babel src --out-dir lib"
   },
   "keywords": [],
@@ -14,14 +14,17 @@
     "@babel/cli": "^7.0.0-rc.1",
     "@babel/core": "^7.0.0-rc.1",
     "@babel/plugin-external-helpers": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
     "@babel/plugin-transform-object-assign": "^7.0.0-rc.1",
     "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "@babel/preset-react": "^7.0.0-rc.1",
+    "react": "^16.4.2",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^4.0.0-beta.8"
   },
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.0.0-rc.1"
+    "@babel/runtime-corejs2": "^7.0.0-rc.1",
+    "classnames": "^2.2.6"
   }
 }
