--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "m-pull-refresh",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "m-pull-refresh",
   "main": "index.js",
   "scripts": {
     "build": "npm run babel && cp ./src/refresh.css ./lib/refresh.css",
     "babel": "babel src --out-dir lib"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "react",
+    "pull-refresh"
+  ],
+  "author": "scliuyang",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
